ci: use macOS runner for Kotlin/Native and iOS targets
- Switch CI and publish workflows to macos-latest
- Required for building iOS (iosArm64, iosX64, iosSimulatorArm64) targets
- Required for macOS native targets (macosX64, macosArm64)
- Xcode toolchain available on macOS runners

--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -6,7 +6,7 @@ on:
 
 jobs:
   publish:
-    runs-on: ubuntu-latest
+    runs-on: macos-latest
 
     permissions:
       contents: write
@@ -24,7 +24,7 @@ jobs:
       - name: Setup Gradle
         uses: gradle/actions/setup-gradle@v3
 
-      - name: Build
+      - name: Build all targets
         run: ./gradlew build
 
       - name: Publish to GitHub Packages
