--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -7,9 +7,10 @@ on:
     branches: [ main ]
 
 jobs:
-  build:
+  # JVM-only build on Linux (faster, cheaper)
+  build-jvm:
     runs-on: ubuntu-latest
-
+    
     steps:
       - uses: actions/checkout@v4
 
@@ -22,12 +23,38 @@ jobs:
       - name: Setup Gradle
         uses: gradle/actions/setup-gradle@v3
 
-      - name: Build and test
+      - name: Build and test (JVM only)
+        run: ./gradlew build test -x :package-private-annotations:compileKotlinIosArm64 -x :package-private-annotations:compileKotlinIosSimulatorArm64 -x :package-private-annotations:compileKotlinIosX64 -x :package-private-annotations:compileKotlinMacosArm64 -x :package-private-annotations:compileKotlinMacosX64 -x :package-private-annotations:compileKotlinLinuxX64
+
+      - name: Upload test results
+        uses: actions/upload-artifact@v4
+        if: always()
+        with:
+          name: test-results-jvm
+          path: '**/build/reports/tests/'
+
+  # Full build with Native targets on macOS
+  build-native:
+    runs-on: macos-latest
+    
+    steps:
+      - uses: actions/checkout@v4
+
+      - name: Set up JDK 21
+        uses: actions/setup-java@v4
+        with:
+          java-version: '21'
+          distribution: 'temurin'
+
+      - name: Setup Gradle
+        uses: gradle/actions/setup-gradle@v3
+
+      - name: Build all targets
         run: ./gradlew build test
 
       - name: Upload test results
         uses: actions/upload-artifact@v4
         if: always()
         with:
-          name: test-results
+          name: test-results-native
           path: '**/build/reports/tests/'
