--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -24,7 +24,7 @@ jobs:
         uses: gradle/actions/setup-gradle@v3
 
       - name: Build and test (JVM only)
-        run: ./gradlew build test -x :package-private-annotations:compileKotlinIosArm64 -x :package-private-annotations:compileKotlinIosSimulatorArm64 -x :package-private-annotations:compileKotlinIosX64 -x :package-private-annotations:compileKotlinMacosArm64 -x :package-private-annotations:compileKotlinMacosX64 -x :package-private-annotations:compileKotlinLinuxX64
+        run: ./gradlew build test -x :package-private-annotations:compileKotlinIosArm64 -x :package-private-annotations:compileKotlinIosSimulatorArm64 -x :package-private-annotations:compileKotlinIosX64 -x :package-private-annotations:compileKotlinMacosArm64 -x :package-private-annotations:compileKotlinMacosX64
 
       - name: Upload test results
         uses: actions/upload-artifact@v4
