--- a/examples/maven/pom.xml
+++ b/examples/maven/pom.xml
@@ -21,9 +21,9 @@
             <version>${kotlin.version}</version>
         </dependency>
         <dependency>
-            <groupId>com.acme</groupId>
+            <groupId>dev.packageprivate</groupId>
             <artifactId>package-private-annotations-jvm</artifactId>
-            <version>0.1.0</version>
+            <version>1.2.0</version>
         </dependency>
     </dependencies>
 
@@ -49,9 +49,9 @@
                 </configuration>
                 <dependencies>
                     <dependency>
-                        <groupId>com.acme</groupId>
+                        <groupId>dev.packageprivate</groupId>
                         <artifactId>package-private-compiler-plugin</artifactId>
-                        <version>0.1.0</version>
+                        <version>1.2.0</version>
                     </dependency>
                 </dependencies>
             </plugin>
